MGS-1383 BUGFIX correct spacing after last main nav item

--- a/resources/scss/components/_component.main-nav.scss
+++ b/resources/scss/components/_component.main-nav.scss
@@ -130,10 +130,6 @@ $main-nav__transition-timing: ease;
       @include transition(background-color $transition-in-time);
     }
 
-    &__item:last-child &__link {
-      padding-right: 0;
-    }
-
     &__link:hover {
       background-color: $color__grey--lighter;
       text-decoration: none;
